test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw
script;

trait A {
    fn len() -> u64;
}

impl<T, const N: u64> A for [T; N] {
    fn len(self) -> u64 {
        N
    }
}

fn main() -> u64 {
    1
}